--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
         <maven.compiler.release>10</maven.compiler.release>
 
         <!-- 5.7.5 uses JNA 5.12.1, so this needs to adjusted in the plugin.yml -->
-        <junit.jupiter.version>5.9.0</junit.jupiter.version>
-        <oshi.version>6.4.0</oshi.version>
+        <junit.jupiter.version>5.9.2</junit.jupiter.version>
+        <oshi.version>6.4.1</oshi.version>
+
+        <spigotApi>1.19.4-R0.1-SNAPSHOT</spigotApi>
     </properties>
 
     <build>
@@ -33,7 +35,7 @@
         <finalName>${project.name}</finalName>
 
         <plugins>
-            <!-- Force an update to the this plugins to allow reproducible builds -->
+            <!-- Force an update to this plugin to allow reproducible builds -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -134,15 +136,21 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.19-R0.1-SNAPSHOT</version>
+            <version>${spigotApi}</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.md-5</groupId>
+                    <artifactId>bungeecord-chat</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--Server API for Spigot-->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.19-R0.1-SNAPSHOT</version>
+            <version>${spigotApi}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -169,7 +177,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-            <version>2.0.6</version>
+            <version>2.0.7</version>
         </dependency>
 
         <!-- Include core explicitly in order to ship the default configuration files in it -->
@@ -183,7 +191,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.30</version>
+            <version>8.0.32</version>
             <scope>provided</scope>
         </dependency>
 
@@ -214,7 +222,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.11.0</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
 
